prusti-tests/tests/verify/ui/refine-impure-with-pure.stderr
error: [Prusti: invalid specification] Invalid specification kind for procedure '<MyStruct as MyTrait>::foo'
  --> $DIR/refine-impure-with-pure.rs:13:5
   |
13 |     fn foo(&self) -> i32 {
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: Procedures can be predicates, pure or impure
   = note: This procedure is of kind 'Impure'
note: This procedure refines a function declared on 'MyTrait'
  --> $DIR/refine-impure-with-pure.rs:3:1
   |
3  | trait MyTrait {
   | ^^^^^^^^^^^^^
   = note: However, 'MyTrait::foo' is of kind 'Pure'
note: Try to convert '<MyStruct as MyTrait>::foo' into a procedure of kind 'Pure'
  --> $DIR/refine-impure-with-pure.rs:13:5
   |
13 |     fn foo(&self) -> i32 {
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

